--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -1,3 +1,5 @@
+PORT=3000
+
 # ---------------------------------------------------
 # Configuración de PostgreSQL
 # ---------------------------------------------------
