Set RabbitMQ to Producer

--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -18,6 +18,17 @@ RABBITMQ_HOST=localhost         # Dirección del host donde corre RabbitMQ
 RABBITMQ_PORT=5672              # Puerto para conexión de aplicaciones (no el de administración)
 RABBITMQ_USER=admin             # Usuario para autenticación
 RABBITMQ_PASSWORD=admin         # Contraseña del usuario
+RABBITMQ_EXCHANGE=task.events   # Nombre del exchange para eventos de tareas
+
+# colas y sus bindings
+TASK_CREATED_QUEUE=task.created.queue   # Cola para eventos de creación de tareas
+TASK_CREATED_ROUTING_KEY=task.created   # Clave de enrutamiento para eventos de creación de tareas
+
+TASK_UPDATED_QUEUE=task.updated.queue   # Cola para eventos de actualización de tareas
+TASK_UPDATED_ROUTING_KEY=task.updated   # Clave de enrutamiento para eventos de actualización de tareas
+
+TASK_DELETED_QUEUE=task.deleted.queue   # Cola para eventos de eliminación de tareas
+TASK_DELETED_ROUTING_KEY=task.deleted   # Clave de enrutamiento para eventos de eliminación de tareas
 
 # ---------------------------------------------------
 # Configuración de Kafka
