--- a/task-logger-node/.env
+++ b/task-logger-node/.env
@@ -18,7 +18,12 @@ RABBITMQ_HOST=localhost         # Dirección del host donde corre RabbitMQ
 RABBITMQ_PORT=5672              # Puerto para conexión de aplicaciones (no el de administración)
 RABBITMQ_USER=admin             # Usuario para autenticación
 RABBITMQ_PASSWORD=admin         # Contraseña del usuario
+
 RABBITMQ_EXCHANGE=task.events   # Nombre del exchange para eventos de tareas
+DLQ_EXCHANGE=task.events.dlq
+
+TASK_CREATED_DLQ=task.created.dlq
+TASK_CREATED_DLQ_ROUTING_KEY=task.created.dlq
 
 # colas y sus bindings
 TASK_CREATED_QUEUE=task.created.queue   # Cola para eventos de creación de tareas
