--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -18,7 +18,12 @@ RABBITMQ_HOST=localhost         # Dirección del host donde corre RabbitMQ
 RABBITMQ_PORT=5672              # Puerto para conexión de aplicaciones (no el de administración)
 RABBITMQ_USER=admin             # Usuario para autenticación
 RABBITMQ_PASSWORD=admin         # Contraseña del usuario
+
 RABBITMQ_EXCHANGE=task.events   # Nombre del exchange para eventos de tareas
+DLQ_EXCHANGE=task.events.dlq
+
+TASK_CREATED_DLQ=task.created.dlq
+TASK_CREATED_DLQ_ROUTING_KEY=task.created.dlq
 
 # colas y sus bindings
 TASK_CREATED_QUEUE=task.created.queue   # Cola para eventos de creación de tareas
@@ -48,3 +53,12 @@ REDIS_PORT=6379                 # Puerto por defecto de Redis
 # ---------------------------------------------------
 
 MONGODB_URI=mongodb://localhost:27017   # URI completa de conexión a MongoDB
+
+# ---------------------------------------------------
+# Variables de Resiliencia
+# ---------------------------------------------------
+
+RETRY_ATTEMPTS=5               # Número de intentos de reintento para operaciones resilientes
+RETRY_DELAY_MS=1000            # Retardo en milisegundos entre intentos de reintento   
+RETRY_TIMEOUT_MS=5000          # Tiempo máximo en milisegundos para esperar una respuesta antes de considerar un fallo
+
