update health + task + schema

--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -52,7 +52,7 @@ REDIS_PORT=6379                 # Puerto por defecto de Redis
 # Configuración de MongoDB
 # ---------------------------------------------------
 
-MONGODB_URI=mongodb://localhost:27017   # URI completa de conexión a MongoDB
+MONGODB_URI=mongodb://localhost:27017/task_failed_event_db   # URI completa de conexión a MongoDB
 
 # ---------------------------------------------------
 # Variables de Resiliencia
