--- a/task-logger-node/.env
+++ b/task-logger-node/.env
@@ -22,8 +22,8 @@ RABBITMQ_PASSWORD=admin         # Contraseña del usuario
 RABBITMQ_EXCHANGE=task.events   # Nombre del exchange para eventos de tareas
 DLQ_EXCHANGE=task.events.dlq
 
-TASK_CREATED_DLQ=task.created.dlq
-TASK_CREATED_DLQ_ROUTING_KEY=task.created.dlq
+TASK_DLQ=task.dlq
+TASK_DLQ_ROUTING_KEY=task.dlq
 
 # colas y sus bindings
 TASK_CREATED_QUEUE=task.created.queue   # Cola para eventos de creación de tareas
@@ -49,7 +49,8 @@ REDIS_HOST=localhost            # Host de Redis
 REDIS_PORT=6379                 # Puerto por defecto de Redis
 
 # ---------------------------------------------------
-# Configuración de MongoDB
+# Conexión a MongoDB
 # ---------------------------------------------------
-
-MONGODB_URI=mongodb://localhost:27017/task_logger_db   # URI completa de conexión a MongoDB
+# URI completa de conexión a MongoDB
+MONGODB_URI=mongodb://localhost:27017/task_logger_db   #conexión a la base de datos de logs de tareas
+FAILED_EVENT_MONGO_URI=mongodb://localhost:27017/task_failed_event_db #conexión a la base de datos de eventos fallidos
