--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -52,7 +52,7 @@ REDIS_PORT=6379                 # Puerto por defecto de Redis
 # Configuración de MongoDB
 # ---------------------------------------------------
 
-MONGODB_URI=mongodb://localhost:27017/task_failed_event_db   # URI completa de conexión a MongoDB
+FAILED_EVENT_MONGO_URI=mongodb://localhost:27017/task_failed_event_db #conexión a la base de datos de eventos fallidos
 
 # ---------------------------------------------------
 # Variables de Resiliencia
