Both Projects OK

--- a/task-manager-node/.env
+++ b/task-manager-node/.env
@@ -22,8 +22,8 @@ RABBITMQ_PASSWORD=admin         # Contraseña del usuario
 RABBITMQ_EXCHANGE=task.events   # Nombre del exchange para eventos de tareas
 DLQ_EXCHANGE=task.events.dlq
 
-TASK_CREATED_DLQ=task.created.dlq
-TASK_CREATED_DLQ_ROUTING_KEY=task.created.dlq
+TASK_DLQ=task.dlq
+TASK_DLQ_ROUTING_KEY=task.dlq
 
 # colas y sus bindings
 TASK_CREATED_QUEUE=task.created.queue   # Cola para eventos de creación de tareas
