Add Retry to connection BD

--- a/task-logger-node/.env
+++ b/task-logger-node/.env
@@ -52,5 +52,11 @@ REDIS_PORT=6379                 # Puerto por defecto de Redis
 # Conexión a MongoDB
 # ---------------------------------------------------
 # URI completa de conexión a MongoDB
-MONGODB_URI=mongodb://localhost:27017/task_logger_db   #conexión a la base de datos de logs de tareas
+MONGODB_URI=mongodb://localhost:27018/task_logger_db   #conexión a la base de datos de logs de tareas
 FAILED_EVENT_MONGO_URI=mongodb://localhost:27017/task_failed_event_db #conexión a la base de datos de eventos fallidos
+
+# ---------------------------------------------------
+# Configuración de RETRY
+# ---------------------------------------------------
+RETRY_MAX_ATTEMPTS=3            # Número máximo de reintentos para operaciones fallidas
+RETRY_DELAY_MS=500              # Tiempo de espera entre reintentos en milisegundos
