--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,66 @@ services:
     container_name: redis-task
     ports:
       - "6379:6379"
+      
+      
+  # ---------------------------------------------------
+  # Elasticsearch (almacenamiento de logs)
+  # ---------------------------------------------------
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.1
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
+  # ---------------------------------------------------
+  # Kibana (interfaz de visualización de logs)
+  # ---------------------------------------------------
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.12.1
+    container_name: kibana
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"  # http://localhost:5601
+
+  # ---------------------------------------------------
+  # Logstash (procesamiento y parseo de logs)
+  # ---------------------------------------------------
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.12.1
+    container_name: logstash
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - "5044:5044"  # Puerto que escucha Filebeat
+
+  # ---------------------------------------------------
+  # Filebeat (lector de logs locales)
+  # ---------------------------------------------------
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:8.12.1
+    container_name: filebeat
+    user: root
+    volumes:
+      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./logs:/app/logs:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./task-manager-node/logs:/app/task-manager-logs:ro
+      - ./task-logger-node/logs:/app/task-logger-logs:ro
+    depends_on:
+      - logstash
+    command: ["--strict.perms=false"]
 
 # ---------------------------------------------------
 # Volúmenes persistentes
@@ -68,3 +128,4 @@ volumes:
   postgres_data:
   mongo_failed_data:
   mongo_logger_data:
+  es_data:
