Add Prometeus + Grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,7 @@ services:
     container_name: redis-task
     ports:
       - "6379:6379"
-      
-      
+
   # ---------------------------------------------------
   # Elasticsearch (almacenamiento de logs)
   # ---------------------------------------------------
@@ -121,6 +120,36 @@ services:
       - logstash
     command: ["--strict.perms=false"]
 
+  # ---------------------------------------------------
+  # Prometheus (recolección de métricas)
+  # ---------------------------------------------------
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"  # Interfaz web http://localhost:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml  # Archivo de configuración Prometheus
+    depends_on:
+      - rabbitmq
+      - postgres
+      - mongodb-failed
+      - mongodb-logger
+      - redis
+
+  # ---------------------------------------------------
+  # Grafana (visualización de métricas Prometheus)
+  # ---------------------------------------------------
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "4000:3000"  # Interfaz web http://localhost:4000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
 # ---------------------------------------------------
 # Volúmenes persistentes
 # ---------------------------------------------------
@@ -129,3 +158,4 @@ volumes:
   mongo_failed_data:
   mongo_logger_data:
   es_data:
+  grafana_data:
