--- a/task-manager-node/package.json
+++ b/task-manager-node/package.json
@@ -36,6 +36,7 @@
     "ioredis": "^5.6.1",
     "mongoose": "^8.16.2",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
